log_input/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-svc
spec:
  type: ClusterIP
  selector:
    app: log
  ports:
    - port: 2245
      protocol: TCP
      targetPort: 5000
